# full-cloud-pinyin

./: .gitignore  Cargo.toml  README.md  cfpinyin.xml  engine.go  go.mod  go.sum  ibusConst.go  ibusInit.go  main.go  release.nu  run.sh  sample.json
c-based-ffi/: CMakeLists.txt  Cargo.toml  README.md
c-based-ffi/src/: CMakeLists.txt  c_api.c  c_api.h  lib.rs  main.c  rust_api.h  rust_api.rs
cpp-17-async/: .clang-format  CMakeLists.txt  task.sh
cpp-17-async/src/: CMakeLists.txt  Program.cpp
cpp-rust-interop/: Cargo.toml  build.rs
cpp-rust-interop/cpp-part/: CMakeLists.txt
cpp-rust-interop/cpp-part/src/: CMakeLists.txt  program.cc
cpp-rust-interop/rust-part/: Cargo.toml
cpp-rust-interop/rust-part/src/: main.rs
cpp-rust-interop/src/: cpp.cc  cpp.h  main.rs  main.rs.h
fcitx5/: .clang-format  CMakeLists.txt  task.sh
fcitx5/po/: CMakeLists.txt
fcitx5/src/: .clang-format  CMakeLists.txt  Used APIs.md  dummy.cc  dummy.h  fcp.h  quwei-addon.conf.in.in  quwei.conf.in  quwei.cpp  quwei.h  rs2cc.cc  rs2cc.h  rustpinyin.h
fcp-dbus/: Cargo.toml
fcp-dbus/src/: main.rs
fcp-dbus/src/ibus/: fcp_engine.rs  mod.rs
fcp-dbus/src/ibus/dbus_client/: ibus_proxy.rs  manual.rs  mod.rs  panel_proxy.rs
fcp-dbus/src/ibus/dbus_server/: mod.rs
fcp-fcitx5/fcitx5/: CMakeLists.txt
fcp-fcitx5/fcitx5/po/: zh_CN.po
fcp-fcitx5/fcitx5/src/: CMakeLists.txt  quwei.cpp
fcp-fcitx5/fcpinyin/: Cargo.toml
fcp-fcitx5/fcpinyin/src/: fcitx5.rs
fcp-fcitx5/fcpinyin/src/include/: rust.h
fcp-fifo/: Cargo.toml
fcp-fifo/src/: main.rs
fcp-goibus/: cloud_pinyin.go  consts.go  engine.go  engine_conc.go  fcpinyin.xml  go.mod  go.sum  ibusInit.go  ibus_init.go  main.go
fcp-goibus/ibus/: bus.go  common.go  component.go  engine.go  engineDesc.go  factory.go  lookupTable.go  property.go  text.go
fcp-goibus/internal/consts/: consts.go
fcp-ibus/: Cargo.toml
fcp-ibus/src/: component.xml  gen.rs  ibus.rs  main.rs
fcp-ibus/src/ibus/: client_factory.rs  connection_factory.rs  fcp_engine.rs  ibus.rs  mod.rs
fcp-ibus/src/ibus/dbus_client/: ibus.rs  mod.rs  panel.rs
fcp-ibus/src/ibus/dbus_server/: engine.rs  factory.rs  service.rs
fcp-ibus/src/ibus/proxy/: engine.rs  factory.rs  ibus.rs  mod.rs  panel.rs  service.rs
fcp-ibus/src/ibus/proxy_zbus/: engine.rs  factory.rs  ibus.rs  panel.rs  service.rs
fcp-pmq/: Cargo.toml
fcp-pmq/src/: main.rs
fcp-socket/fcp/: Cargo.toml
fcp-socket/fcpinyin/: Cargo.toml
fcp-socket/fcpinyin/src/: main.rs
fcp-socket/fcpinyin/src/proto/: fcitx_to_fcp.proto  fcp_to_fcitx.proto
fcp-zbus/: Cargo.toml  fcpinyin.xml  install.sh  rustfmt.toml
fcp-zbus/src/: candidate_service.rs  cloud_pinyin_client.rs  dispatcher.rs  engine.rs  generated.rs  ibus_helper.rs  ibus_proxy.rs  ibus_variants.rs  keys.rs  listeners.rs  main.rs  mode_switcher.rs  number_service.rs  pipeline.rs  preedit_service.rs  symbol_service.rs
fcp-zbus/src/ibus/: ibus.rs  mod.rs
fcp-zbus/src/new/: candidate_service.rs  cloud_pinyin_client.rs  dispatcher.rs  ibus_proxy.rs  mod.rs  mode_switcher.rs  number_handler.rs  number_service.rs  pinyin_handler.rs  pipeline.rs  symbol_handler.rs  symbol_service.rs
fcp-zmq/fcp/: Cargo.toml
fcp-zmq/fcp/src/: candidate.rs  candidate_service.rs  cloud_pinyin_client.rs  dispatcher.rs  ims.rs  ims_recv.rs  ims_send.rs  keys.rs  main.rs  msgs.proto  msgs.rs  number_service.rs  preedit_service.rs  symbol_service.rs
fcp-zmq/fcp/src/proto/: ims_recv.proto  msgs.proto
fcp-zmq/ims/: CMakeLists.txt  Makefile  dev.sh  fcitx_to_fcp.pb.cc  fcitx_to_fcp.pb.h  fcp_to_fcitx.pb.cc  fcp_to_fcitx.pb.h  fcp_to_ims.pb.cc  fcp_to_ims.pb.h  ims-addon.conf  ims.conf  ims.cpp  ims.h  ims_recv.pb.cc  ims_recv.pb.h  ims_send.pb.cc  ims_send.pb.h  ims_to_fcp.pb.cc  ims_to_fcp.pb.h  ims_to_fcp.proto  msgs.pb.cc  msgs.pb.h  msgs.proto
fcp-zmq/ims/proto/: ims_recv.proto  ims_send.proto  msgs.proto
fcpinyin/: Cargo.toml  cpp_rust_bridge.h  cxx.h  ffi.cc  ffi.h  task.sh
fcpinyin/src/: cpp_rust_bridge.rs  fcitx5.rs  fcitx_enum.rs  fcp.rs  fcpinyin.rs  ffi.rs  lib.rs  main.rs  old_implementation.rs  tui.rs
fcpinyin/src/cli/: cargo-fcp.rs  main.rs
fcpinyin/src/core/: lib.rs  sample.json
fcpinyin/src/ibus/: ibus.rs  mod.rs
fcpinyin/src/include/: rust.h
ibus/: bindings.rs  go.mod  run.sh
internal/cloudPinyin/: cache.go  cloudPinyin.go
internal/consts/: const.go  consts.go
internal/engine/: engine.go  table.go
preprocessor/: Cargo.toml  ffi.cc  ffi.h  regex.txt
preprocessor/src/: main.rs
rust-async/: Cargo.toml
rust-async/src/: main.rs
src/: candidate.rs  candidate_service.rs  cloud_pinyin_client.rs  dispatcher.rs  ims.rs  keys.rs  main.rs  msgs.proto  msgs.rs  number_service.rs  payload.txt  preedit_service.rs  request_headers.txt  sample_response.json  serde.json  symbol_service.rs  user_dict.rs  zmq.rs
src/common/: candidate_decoder.rs  candidate_service.rs  dispatcher.rs  http2.rs  keys.rs  mod.rs  path_util.rs  preedit_service.rs  user_dict.rs  zmq.rs
src/nepali/: cloud_nepali.rs  mod.rs  nepali_decoder.rs  nepali_dispatcher.rs  number_service.rs
src/pinyin/: cloud_pinyin.rs  cloud_pinyin_client.rs  dispatcher.rs  mod.rs  number_service.rs  pinyin_decoder.rs  pinyin_dispatcher.rs  symbol_service.rs
tui/: Cargo.toml
tui/src/: main.rs
