[package]
name = "fcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.10.0"
quick-protobuf = "0.8.1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.22"
regex = "1.10.2"
dirs = "5.0.1"