[package]
name = "fcp-zbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3.13.1", default-features = false, features = ["tokio", "gvariant"] }
zvariant = { version = "3.14.0", features = ["gvariant"] }
serde = "1.0.163"
tokio = { version = "1", features = ["full"] }
