[package]
name = "fcp-zbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.13.1"
zvariant = "3.14.0"
serde = "1.0.163"
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
bincode = "1.3.3"
regex = "1.6.0"
home = "0.5.4"
reqwest = "0.11.18"