[package]
name = "fcpinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
regex = "1.6.0"
fltk = { version = "^1.2", features = ["fltk-bundled"] }
fltk-table = "0.2.1"